<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/offers_bg"
    android:padding="8dp"
    android:layout_margin="4dp">

    <TextView
        android:id="@+id/looking_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#015905"
        android:text="@string/looking_now"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/is_fav_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:minWidth="48dp"
        style="@style/FavIcon"
        android:contentDescription="@string/favorite"
        app:icon="@drawable/ic_fav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/vac_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/vac_title"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/looking_now"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/vac_town"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/vac_town"
        android:textSize="14sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/vac_title"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/vac_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vac_company"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:drawableEnd="@drawable/ic_company"
        android:drawablePadding="8dp"
        android:drawableTint="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/vac_town"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UseCompatTextViewDrawableXml" />

    <TextView
        android:id="@+id/vac_experience"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/vac_experience"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:drawableStart="@drawable/ic_exp"
        android:drawablePadding="8dp"
        app:layout_constraintTop_toBottomOf="@id/vac_company"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UseCompatTextViewDrawableXml" />

    <TextView
        android:id="@+id/vac_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/vac_date"
        android:textSize="14sp"
        android:textColor="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/vac_experience"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/response_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        style="@style/ResponseButton"
        android:text="@string/response"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vac_date"
        />

</androidx.constraintlayout.widget.ConstraintLayout>